data/derived/fa15/progs/unify/prog1152.ml.out
Characters 100-112:
  let f a x = let sum = fst x + snd x + fst a in ((sum / 10)::(sum mod 10)) in
                                                              ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
